--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="src/app.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/clear.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/2stage.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/title.js" charset="UTF-8"></script>
 </head>
 <body>
     <canvas id="gameCanvas" ></canvas>
@@ -23,7 +24,7 @@
                   cc.view.resizeWithBrowserSize(true);
 
                   cc.LoaderScene.preload(g_resources, function () {
-                       cc.director.runScene(new gameScene());
+                       cc.director.runScene(new FirstScene());
                   }, this);
               };
               cc.game.run("gameCanvas");
